fix: update navbar toggler to use icon and style adjustments for better visibility

--- a/Frontend/src/css/index.css
+++ b/Frontend/src/css/index.css
@@ -15,8 +15,13 @@ header {
     background-color: var(--red);
 }
 
+.icon_bars {
+    color: white;
+    border-radius: 25%;
+    border-color: white;
+}
 
-/* Badge per le notifiche (wishlist e carrello) */
+/*Badge per le notifiche (wishlist e carrello) */
 .notification-badge {
     position: absolute;
     top: -5px;
@@ -465,33 +470,40 @@ a {
 }
 
 .input-group-text {
-    font-size: 0.875rem; /* Riduci la dimensione del testo */
-    padding: 0.375rem 0.75rem; /* Riduci il padding */
-  }
-  
-  .badge.bg-danger {
-    font-size: 1rem; /* Riduci la dimensione del badge */
-    padding: 0.25rem 0.5rem; /* Riduci il padding interno */
-  }
-  
-  .strike-through {
+    font-size: 0.875rem;
+    /* Riduci la dimensione del testo */
+    padding: 0.375rem 0.75rem;
+    /* Riduci il padding */
+}
+
+.badge.bg-danger {
+    font-size: 1rem;
+    /* Riduci la dimensione del badge */
+    padding: 0.25rem 0.5rem;
+    /* Riduci il padding interno */
+}
+
+.strike-through {
     position: relative;
     display: inline-block;
-  }
-  
-  .strike-through::before {
+}
+
+.strike-through::before {
     content: '';
     position: absolute;
     top: 50%;
     left: 0;
     width: 100%;
-    height: 2px; /* Altezza della linea */
-    background-color: rgba(255, 255, 255, 0.8); /* Bianco meno trasparente */
-    transform: translateY(-50%); /* Posiziona la linea orizzontale al centro */
-  }
-  
-  
-  .banner-container {
+    height: 2px;
+    /* Altezza della linea */
+    background-color: rgba(255, 255, 255, 0.8);
+    /* Bianco meno trasparente */
+    transform: translateY(-50%);
+    /* Posiziona la linea orizzontale al centro */
+}
+
+
+.banner-container {
     width: 100%;
     overflow: hidden;
     background-color: var(--blue);
@@ -518,6 +530,7 @@ a {
     0% {
         transform: translateX(100%);
     }
+
     100% {
         transform: translateX(-100%);
     }
